k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    app: api
  name: api
spec:
  ports:
    - name: "5050"
      port: 5050
      targetPort: 5000
  selector:
    app: api
