k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    app: web
  name: web
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    app: web
